fix: prevent iframe overflow

--- a/src/custom.css
+++ b/src/custom.css
@@ -43,6 +43,10 @@ img {
   height: auto;
 }
 
+iframe {
+  max-width: 100%;
+}
+
 .accordion__title {
   box-sizing: border-box;
 }
